--- a/style.css
+++ b/style.css
@@ -396,6 +396,7 @@ header {
   padding: 60px 8%;
   height: fit-content;
   gap: 40px;
+  background-color: var(--bg-black);
 }
 
 .card {
@@ -462,6 +463,7 @@ header {
   text-transform: uppercase;
   background: linear-gradient(15deg, var(--bg-yg) 40%, var(--bg-g) 100%);
   margin: 60px 0;
+  background-color: var(--bg-black);
 }
 
 .banner h1 {
@@ -606,6 +608,7 @@ header {
   height: 400px;
   color: var(--text-white);
   margin: 60px 0;
+  background-color: var(--bg-black);
 }
 
 .quotes img {
