--- a/style.css
+++ b/style.css
@@ -366,6 +366,7 @@ header {
   height: fit-content;
   gap: 30px;
   padding: 60px 10%;
+  background-color: var(--bg-black);
 }
 
 .aboutbox {
@@ -462,7 +463,7 @@ header {
   overflow: hidden;
   text-transform: uppercase;
   background: linear-gradient(15deg, var(--bg-yg) 40%, var(--bg-g) 100%);
-  margin: 60px 0;
+  padding: 60px 0;
   background-color: var(--bg-black);
 }
 
@@ -607,7 +608,7 @@ header {
   width: 100%;
   height: 400px;
   color: var(--text-white);
-  margin: 60px 0;
+  padding: 60px 0;
   background-color: var(--bg-black);
 }
 
@@ -717,6 +718,7 @@ footer {
   justify-content: center;
   align-items: center;
   margin-top: auto;
+  text-align: start;
 }
 
 .logobox {
@@ -730,7 +732,7 @@ footer {
 .linkbox {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  text-align: start;
   width: 20%;
   font-weight: 800;
 }
@@ -744,7 +746,7 @@ footer {
 .detailbox {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  text-align: start;
   width: 20%;
   font-weight: 600;
 }
@@ -906,7 +908,7 @@ p {
     height: 200px;
   }
   .banner{
-    margin: 30px 0;
+    padding: 30px 0;
   }
   .foodbanner img {
     height: 350px;
@@ -926,7 +928,7 @@ p {
     }
   }
   .quotes {
-    margin: 30px 0;
+    padding: 30px 0;
     height: 280px;
   }
   .quotes .quote {
@@ -957,10 +959,12 @@ p {
   }
   .linkbox {
     width: 100%;
+    text-align: center;
   }
   .detailbox {
     width: 100%;
     margin: 10px 0;
+    text-align: center;
   }
   .logobox {
     flex-direction: row;
